# django-issue-tracker

./: .env.sample  .gitignore  README.md  pyproject.toml
issues/: admin.py  models.py
issues/migrations/: 0001_initial.py  0002_initial.py  0003_alter_issue_linked_issues.py
project/: admin.py  models.py
project/migrations/: 0001_initial.py
tracker/: settings.py  urls.py
